...
                shape = MaterialTheme.shapes.large,
            ) {
                Column(
                    modifier = Modifier.padding(16.dp),
                ) {
                    Text(
                        text = "Save SQLite Database As",
                        style = MaterialTheme.typography.h6,
                        modifier = Modifier.padding(bottom = 20.dp).align(Alignment.CenterHorizontally),
                    )

                    OutlinedTextField(
                        value = viewModel.saveAsFileName.value,
...
                        horizontalArrangement = Arrangement.End,
                    ) {
                        TextButton(
                            onClick = onDismissRequest,
                            modifier = Modifier.padding(end = 8.dp),
                        ) {
                            Text("Cancel")
                        }
                        Button(
                            onClick = {
                                viewModel.confirmSaveAsSQLite()
                            },
                            enabled =
...
