...
                    Box(
                        modifier = Modifier
                            .fillMaxHeight()
                            .background(Color.Transparent),
                        contentAlignment = Alignment.Center
                    ) {
                        Text("Graph", color = Color.White)
                    }
                }
            }
            Divider(
                modifier = Modifier
                    .fillMaxHeight()
...
