...
                            showUploadSaveButtons.value = !showUploadSaveButtons.value
                            if (!showUploadSaveButtons.value) {
                                showSQLiteSaveClearButtonsPanel.value = false
                                showNeo4jSaveClearButtonsPanel.value = false
                            }
                        },
                        modifier = Modifier.fillMaxWidth().testTag("uploadSaveButton"),
                    ) { Text("Upload/Save") }

                    DBButtons(
                        viewModel,
                        showNeo4jSaveClearButtonsPanel,
                        showSQLiteSaveClearButtonsPanel,
...
                        modifier = Modifier.fillMaxWidth(),
                    ) { Text(text = "Reset Graph Layout") }
                    DividerG()
                    Button(
                        onClick = { showAlgoButtons.value = !showAlgoButtons.value },
                        modifier = Modifier.fillMaxWidth(),
                    ) { Text("Algorithms") }
                    AlgoButton(viewModel, showAlgoButtons, showResult)
                    DividerG()
                    Spacer(modifier = Modifier.padding(4.dp))
                }
            }

...
