...
                onClick = {
                    showResult.value = false
                    viewModel.runTarjan()
                },
                modifier = Modifier.fillMaxWidth()
            ) {
                Text("Tarjan")
            }
            Button(
                onClick = {
                    showResult.value = false
                    viewModel.runFindKey()
                },
...
